fix: hide horizontal scrollbars that may appear
https://www.frontendmentor.io/solutions/pod-request-access-landing-page-vW8YLVBl1#feedback

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 body {
   font-family: 'Chivo', sans-serif;
-  
+  overflow-x: hidden;
   background-size: contain;
   background-repeat: no-repeat;
 }
